openapi: match_mode=literal|regexp, document order, fix whitespace
